@@ -150,6 +150,8 @@ static constexpr StaticEnumChoice infobox_border_list[] = {
     N_("Box"), N_("Draws boxes around each InfoBox.") },
   { unsigned(InfoBoxSettings::BorderStyle::TAB),
     N_("Tab"), N_("Draws a tab at the top of the InfoBox across the title.") },
+  { unsigned(InfoBoxSettings::BorderStyle::SHADED),
+    N_("Shaded"), nullptr /* TODO: help text */ },
   { 0 }
 };
 
